# NTHMC

./: .gitignore  AGENTS.md  CLAUDE.md  INIT.md  LICENSE  PROJECT_LOG.md  README.md  SPEC.md  pyproject.toml  requirements.txt
2du1/evaluation/: add_folder.sh
2du1/evaluation/addcos/: compare_fthmc.py  run.sh
2du1/evaluation/base/: compare_fthmc.py  gen_sub.sh  run.sh
2du1/evaluation/hmc/: compare_hmc.py  gen_sub.sh  run.sh
2du1/evaluation/jax/: compare_fthmc.py
2du1/gauge_generation/: gen_sub.sh  generate.py  run.sh
2du1/gauge_generation/dumps/: accept_rate_L16_beta3.0.csv  accept_rate_L32_beta4.0.csv  accept_rate_L4_beta1.0.csv  (+5 more)
2du1/model_training/: gen_sub.sh  run.sh  run_opt.sh  train.py  train_opt.py
2du1/scripts/: run_scaling.sh
2du2/gauge_generation/: gen_sub.sh  generate.py  run.sh
2du2/model_training/: gen_sub.sh  run.sh  train.py
2du2/scripts/: run_scaling.sh
presentation/: 2du1_scaling.ipynb  2du2_scaling.ipynb  Field_transform.html  Field_transform.md  alignment.md  compute_l16_baseline.py  jax_benchmark_summary.md  jax_optimization.ipynb  model.md  optimization_plan.md
presentation/docs/: Field_transform.html  optimization_plan.md
presentation/jax_benchmark/: jax_benchmark_summary.md
src/nthmc/: __init__.py  field_transform.py  models.py
tests/: conftest.py  test_hmc_tuning.py  test_model_registry.py  test_topo_raw_hmc_2du1.py  test_topo_raw_hmc_2du2.py  test_torch_training_backend.py  test_u1_jax_backend.py  test_u2.py  test_u2_alignment_loss_ablation.py  test_u2_manual_logdet.py  test_u2_topology_alignment_diagnostic.py
(+865 files in other folders)
